// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalAnt should render a modal dialog by default 1`] = `
<Modal
  cancelText="Action"
  confirmLoading={false}
  okButtonProps={
    Object {
      "disabled": false,
      "title": undefined,
    }
  }
  okText="Cancel"
  okType="primary"
  onCancel={[Function]}
  onOk={[Function]}
  title=""
  visible={false}
  width="900px"
/>
`;

exports[`ModalAnt should support a custom footer 1`] = `
<Modal
  confirmLoading={false}
  footer={
    <div>
      Hello World
    </div>
  }
  okType="primary"
  onCancel={[Function]}
  title=""
  visible={false}
  width="900px"
/>
`;
